--- a/SCTP Capstone Project_Bank Customer Churn.ipynb
+++ b/SCTP Capstone Project_Bank Customer Churn.ipynb
@@ -1657,6 +1657,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "3fb32aa1-6be9-4c94-a5b8-c9c1f027da05",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# ### Feature Engineering  -- to remove\n",
+    "# Here, we will conduct a few steps for feature engineering to transform parts of the raw data into meaningful features that will enrich the dataset and help improve the performance of machine learning model. For this dataset, we will conduct the following steps to make the data more useful for prediction later.\n",
+    "# * <b>Age Grouping</b> >> Bin Age into categorical groups\n",
+    "# * <b>Balance Segmentation</b> >> Segment according to the customer's balance - whether balance is above/below the median.\n",
+    "# * <b>Product Ownership and Balance Interaction</b> >> Create interaction between NumOfProducts & Balance since both influence/impact customer churn\n",
+    "# * <b>Age and Balance Interaction</b> >> Create interaction between Age & Balance as both are correlated "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "71c2436a-7557-4c63-b8e1-c9fb6112f348",
    "metadata": {},
